[room api] use swagger documentation create room api and get room details api
