# routes/room.js
@@ -8,8 +8,7 @@
 const express = require("express");
 const router = express.Router();
 const service = require("../service/roomService");
-const storyService =
-require("../service/storyService");
+const storyService = require("../service/storyService");
 const { BAD_REQUEST, SERVER_ERROR } = require("../util/http");
 
 // get room list
@@ -62,17 +61,6 @@ router.get("/", async (req, res, next) => {
   const { id } = req.query;
 
   try {
-    const details = await service.getRoomDetail(id);
-    res.json(details);
-  } catch (e) {
-    next(e);
-  }
-});
-
-router.get("/detail", async (req, res, next) => {
-  const { id } = req.query;
-
-  try {
     const room = await service.getRoomDetail(id);
 
     const { storyId } = room;
@@ -82,11 +70,13 @@ router.get("/detail", async (req, res, next) => {
     res.json({
       roomId: id,
       roomName: room.name,
+      roomDescription: room.description,
       roomCreateTime: room.createTime,
+      roomDelete: room.delete,
+      roomMembers: room.members,
       storyId: story._id,
       storyTitle: story.title,
-      imageUrl:story.image
-
+      imageUrl: story.image,
     });
   } catch (e) {
     next(e);
